fix respawn problem delete gui and network